# inferPhysics

./: Artist.cpp  Artist.h  CMakeLists.txt  CreatePath.cpp  CreatePath.h  main.cpp
Data/: EqualBounce.json  HitandThud.json  Plotter.py  ProjectileMotion.json  RandomSnapShots.json  Smallbounce.json  SpringForce.json  actualPath  pathWithMomentum  predictedPath
FADBAD++/: fadbad.h  fadiff.h
doublePendulum/: doublePendulum.pde
